fixed product alignment on wide screens

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -474,19 +474,28 @@ ka-coffee-port-what {
       overflow: hidden; }
       @media screen and (min-width: 2000px) {
         ka-coffee-port-what products float-button {
-          max-height: 600px; } }
+          max-height: 360px;
+          height: 360px; } }
       @media screen and (max-width: 1999px) {
         ka-coffee-port-what products float-button {
-          max-height: 300px; } }
+          max-height: 350px;
+          height: 350px; } }
+      @media screen and (max-width: 1800px) {
+        ka-coffee-port-what products float-button {
+          max-height: 325px;
+          height: 325px; } }
       @media screen and (max-width: 1650px) {
         ka-coffee-port-what products float-button {
-          max-height: 275px; } }
+          max-height: 285px;
+          height: 285px; } }
       @media screen and (max-width: 1500px) {
         ka-coffee-port-what products float-button {
-          max-height: 265px; } }
+          max-height: 265px;
+          height: 265px; } }
       @media screen and (max-width: 1400px) {
         ka-coffee-port-what products float-button {
-          max-height: 250px; } }
+          max-height: 250px;
+          height: 250px; } }
       @media screen and (max-width: 1240px) {
         ka-coffee-port-what products float-button {
           max-height: 225px; } }
@@ -516,16 +525,17 @@ ka-coffee-port-what {
           ka-coffee-port-what products float-button .rl-coffee-float-btn > div > a {
             max-height: inherit; }
       ka-coffee-port-what products float-button .rl-coffee-float-img {
-        max-height: inherit; }
+        max-height: inherit;
+        height: 100%; }
       ka-coffee-port-what products float-button img {
         max-height: inherit;
         width: auto;
+        height: 100%;
         transform: scale(1.05);
         -webkit-transform: scale(1.05); }
         @media screen and (min-width: 1366px) {
           ka-coffee-port-what products float-button img {
-            width: 100%;
-            height: auto; } }
+            width: 100%; } }
       ka-coffee-port-what products float-button .rl-coffee-floatButton-copy {
         position: relative;
         margin-left: auto;
